--- a/frontend/templates/base-2.html
+++ b/frontend/templates/base-2.html
@@ -7,7 +7,7 @@
     <!-- Estilos y Favicon  -->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/styles.css') }}"
+      href="{{ url_for('static', filename='css/styles-og.css') }}"
     />
     <link
       rel="shortcut icon"
@@ -18,6 +18,9 @@
   </head>
   <body>
     {% block body %} {% endblock %}
-    <script type="text/javascript" src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    <script
+      type="text/javascript"
+      src="{{ url_for('static', filename='js/scripts.js') }}"
+    ></script>
   </body>
 </html>
